// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the model picker > keeps its rendered shape 1`] = `
"div.mpick
  div.find
    svg
      path
    input
  div.models
    div.model-group[data-provider=minimax]
      div.model-group-hd
        img.provider-icon.mark-light[data-provider=minimax]
        img.provider-icon.mark-dark[data-provider=minimax]
        span.nm
        span.ct
      button.row
        span.nm
        span.tick
      button.row
        span.nm
    div.model-group[data-provider=anthropic]
      div.model-group-hd
        img.provider-icon[data-provider=anthropic][data-tone=hybrid]
        span.nm
        span.ct
      button.row
        span.nm
      button.row
        span.nm
    div.model-group[data-provider=empty]
      div.model-group-hd
        span.provider-icon.fallback
        span.nm
        span.ct
      div.empty
  div.foot
    button"
`;

exports[`the names > keeps its rendered shape 1`] = `
"div.mpick
  div.find
    svg
      path
    input
  div.models
    div.model-group[data-provider=anthropic]
      div.model-group-hd
        img.provider-icon[data-provider=anthropic][data-tone=hybrid]
        span.nm
        span.ct
      button.row
        span.nm
      button.row
        span.nm
  div.foot
    button"
`;
